# PicsArtProjects

./: .gitignore  Add.cpp  Add.h  ApplicationTesting.cpp  ApplicationTesting.hpp  ApplicationTesting.py  Bool.cpp  Bool.h  Bool.hpp  BoolOperations.cpp  BoolOperations.h  BoolOperations.hpp  CMakeLists.txt  ConvertFunctions.cpp  ConvertFunctions.h  ConvertFunctions.hpp  CreatorFunctions.cpp  CreatorFunctions.hpp  DontKnow.cpp  DontKnow.h  Evaluator.cpp  Evaluator.hpp  Exception.cpp  Exception.h  Exception.hpp  Expression.cpp  Expression.h  Expression.hpp  ExpressionTree.cpp  ExpressionTree.h  Float.cpp  Float.h  Float.hpp  FloatOperations.cpp  FloatOperations.h  FloatOperations.hpp  FunctionSet.cpp  FunctionSet.h  Functions.cpp  Functions.h  (+62 more)
